@@ -1,0 +1,5 @@
+package UsesConfig;
+
+use Config;  # note no specific version requirement
+
+1;
